Se agregan assets y se crea pagina de home

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,5 +18,8 @@
         "react"
     ],
     "rules": {
+        "trailing-comma": 0,
+        "linebreak-style": 0,
+        "quotes": [1, "double"]
     }
 }
